3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

lib/formulae: fix bug #1726561: formulae for potion_heal needs supreme potion of life.
Nicolas Weeger 2007-05-28

server/apply.c: food/drink can't be eaten if no_pick is set.
Nicolas Weeger 2007-05-26

Implement feature request #1653768: Pants/legs
 common/item.c
 include/object.h
Nicolas Weeger 2007-05-24

server/time.c: allow plugins to override the usual move process.
Nicolas Weeger 2007-05-24

Add party rejoin at login. New command 'party_rejoin' to control the behaviour.
 include/player.h sproto.h
 server/c_party.c commands.c login.c player.c
 lib/help/party_rejoin
 lib/Makefile.am
Nicolas Weeger 2007-05-21

Fix bug #1713140: sustenance overflow.
include/player.h: change digestion from sint8 to sint16. Change other fields
 the same to avoid potential overflows.
Nicolas Weeger 2007-05-20

server/disease.c: Add check to make sure symptom was not destroyed
  when victim dies - otherwise we get double remove/free.
MSW 2007-05-19

server/skill_util.c: fix wrong 'skills' display when no god is worshipped.
Nicolas Weeger 2007-05-10

server/disease.c: fix bug #1713112: rabies infects audience of the arena.
Nicolas Weeger 2007-05-09

server/c_wiz.c: fix multipart object creation.
Nicolas Weeger 2007-05-09

server/plugins.c: fix wrong parameter order.
Nicolas Weeger 2007-05-08

Add 'Crossfire.Object.Race' attribute.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-05-08

server/plugins.c: fix plugin unloading which didn't call the closePlugin function.
server/c_wiz.c: document.
Nicolas Weeger 2007-05-07

doc/Developers/objects: Mark 'flying' attribute as obsolete.