@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix bug #1726632: After useing a # of times on the forge..
+server/alchemy.c: item may change, so its weight too. This leads to invalid carrying.
+Nicolas Weeger 2007-05-30
+
 lib/formulae: fix bug #1726561: formulae for potion_heal needs supreme potion of life.
 Nicolas Weeger 2007-05-28
 
